--- a/.github/workflows/opus_lib_x64.yml
+++ b/.github/workflows/opus_lib_x64.yml
@@ -1,12 +1,13 @@
 name: Build and cache opus lib x64
 
 on:
-  workflow_call:
   workflow_dispatch:
+  workflow_call:
     inputs:
       opus-version:
         required: true
         type: string
+  push:
 
 jobs:
   check-cache:
