--- a/.github/workflows/opus_lib_x64.yml
+++ b/.github/workflows/opus_lib_x64.yml
@@ -31,8 +31,8 @@ jobs:
     steps:
     - name: Init environment files
       run: |
-        echo "cache-path=opus-lib/${{ inputs.opus-version }}/x64" >> $GITHUB_ENV
-        echo "cache-key=opus-lib-${{ inputs.opus-version }}-x64" >> $GITHUB_ENV
+        echo "CACHE_KEY=opus-lib-${{ inputs.opus-version }}-x64" >> "$GITHUB_ENV"
+        echo "CACHE_PATH=opus-lib/${{ inputs.opus-version }}/x64" >> "$GITHUB_ENV"
 
     - name: Checkout opus
       uses: actions/checkout@v4
@@ -49,10 +49,10 @@ jobs:
       uses: microsoft/setup-msbuild@v2
 
     - name: Build
-      run: msbuild ${{ env.OPUS_SOLUTION_FILE_PATH }}/opus.vcxproj -m -p:PlatformToolset=v143 -p:Configuration=${{ env.BUILD_CONFIGURATION }} -p:Platform=x64 -p:OutDir="${{ github.workspace }}/${{ env.cache-path }}/"
+      run: msbuild ${{ env.OPUS_SOLUTION_FILE_PATH }}/opus.vcxproj -m -p:PlatformToolset=v143 -p:Configuration=${{ env.BUILD_CONFIGURATION }} -p:Platform=x64 -p:OutDir="${{ github.workspace }}/${{ env.CACHE_PATH }}/"
 
     - name: Cache
       uses: actions/cache/save@v4
       with:
-        key: ${{ env.cache-key }}
-        path: ${{ env.cache-path }}
+        key: ${{ env.CACHE_KEY }}
+        path: ${{ env.CACHE_PATH }}
