--- a/.github/workflows/opus_lib_x64.yml
+++ b/.github/workflows/opus_lib_x64.yml
@@ -34,6 +34,11 @@ jobs:
         echo "CACHE_KEY=opus-lib-${{ inputs.opus-version }}-x64" >> "$GITHUB_ENV"
         echo "CACHE_PATH=opus-lib/${{ inputs.opus-version }}/x64" >> "$GITHUB_ENV"
 
+    - name: Check environment files
+      run: |
+        echo "Key is: '${{ env.CACHE_KEY }}'"
+        echo "Path is: '${{ env.CACHE_PATH }}'"
+
     - name: Checkout opus
       uses: actions/checkout@v4
       with:
