--- a/.github/workflows/opus_lib_x64.yml
+++ b/.github/workflows/opus_lib_x64.yml
@@ -31,18 +31,20 @@ jobs:
     steps:
     - name: Init environment files
       run: |
+        echo "action_state=yellow" >> $GITHUB_ENV
         echo "CACHE_TEST1=test_value1" >> "$GITHUB_ENV"
-        echo "'CACHE_TEST2'='test_value2'" >> "$GITHUB_ENV"
+        echo "cache_test2'='test_value2'" >> $GITHUB_ENV
         echo "CACHE_KEY=opus-lib-${{ inputs.opus-version }}-x64" >> "$GITHUB_ENV"
         echo "CACHE_PATH=opus-lib/${{ inputs.opus-version }}/x64" >> $GITHUB_ENV
 
     - name: Check environment files
       run: |
+        echo "State is: '${{ env.action_state }}'"
         echo "Version is: ${{ inputs.opus-version }}"
         echo "Key is: $CACHE_KEY"
         echo "Path is: ${{ env.CACHE_PATH }}"
         echo "Test1 is: ${{ env.CACHE_TEST1 }} or $CACHE_TEST1"
-        echo "Test2 is: ${{ env.CACHE_TEST2 }} or $CACHE_TEST2"
+        echo "Test2 is: ${{ env.cache_test2 }} or $cache_test2"
 
     - name: Checkout opus
       uses: actions/checkout@v4
