--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        vcpkg integrate install
         vcpkg install simpleini
 
     - name: Build
