Use manifest mode vcpkg for simpleini

--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -51,6 +51,9 @@
     <IncludePath>..\SoundRemote\;$(IncludePath)</IncludePath>
     <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
+  <PropertyGroup Label="Vcpkg">
+    <VcpkgEnableManifest>true</VcpkgEnableManifest>
+  </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
