Add "runVcpkgInstall: true" in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,7 @@ jobs:
       with:
         # version 2025.06.13
         vcpkgGitCommitId: ef7dbf94b9198bc58f45951adcf1f041fcbc5ea0
+        runVcpkgInstall: true
 
     - name: Build
       working-directory: ${{ env.GITHUB_WORKSPACE }}
