Add Integrate vcpkg again in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,6 +68,10 @@ jobs:
         vcpkgGitCommitId: ef7dbf94b9198bc58f45951adcf1f041fcbc5ea0
         runVcpkgInstall: true
 
+    - name: Integrate vcpkg
+      run: |
+        vcpkg integrate install
+
     - name: Build
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       env:
