--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,13 @@ jobs:
         mkdir -p lib/opus/${{env.PLATFORM}}
         mv ${{ env.OPUS_CACHE_PATH }}/opus.lib lib/opus/${{ env.PLATFORM }}
 
-    # - name: Install boost
-    #   uses: MarkusJx/install-boost@v2.4.5
-    #   id: install-boost
-    #   with:
-    #     boost_version: 1.83.0
-    #     platform_version: 2022
-    #     toolset: msvc
+    - name: Install boost
+      uses: MarkusJx/install-boost@v2.5.0
+      id: install-boost
+      with:
+        boost_version: 1.88.0
+        platform_version: 2022
+        toolset: msvc
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v2
