Enable run-vcpkg

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,10 +61,10 @@ jobs:
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       run: nuget restore ${{ env.SOLUTION_FILE_PATH }}
 
-    # - name: Setup vcpkg
-      # uses: lukka/run-vcpkg@v11
-      # with:
-        # vcpkgGitCommitId: ef7dbf94b9198bc58f45951adcf1f041fcbc5ea0   # version 2025.06.13
+    - name: Setup vcpkg
+      uses: lukka/run-vcpkg@v11
+      with:
+        vcpkgGitCommitId: ef7dbf94b9198bc58f45951adcf1f041fcbc5ea0   # version 2025.06.13
 
     - name: Integrate vcpkg
       run: |
