--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,4 +58,4 @@ jobs:
       with:
         name: release-x64
         path: ${{ env.BINARY_FILE_PATH }}\SoundRemote.exe
-        compression-level: 9
+        # compression-level: 9
